fix no-scroll on safari

--- a/src/common/common.scss
+++ b/src/common/common.scss
@@ -1,7 +1,11 @@
 //Toast Open
-body.no-scroll{
+body,#root {
+  margin: 0;
+  height: 100%;
+  overflow-y: auto;
+}
+.no-scroll {
   overflow: hidden;
-  position: relative;
 }
 
 //Custom scss
